Corrected overflow

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: sans-serif;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .welcomeSection {
